# vatvalidate

./: .gitignore  LICENSE  README.md  pyproject.toml  run-tests.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
tests/: test_validation.py
vatvalidate/: exceptions.py  validate.py
