[tool.poetry]
name = "vatvalidate"
version = "0.0.1"
description = "vatvalidate is a Python library for validating UK VAT numbers."
authors = ["Beauhurst devs <dev@beauhurst.com>"]
documentation = "https://github.com/Beauhurst/vatvalidate"
license = "MIT"
packages = [
    { include = "vatvalidate" },
    { include = "vatvalidate/py.typed" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = ">=21.5b1,<24"
ipython = ">=7.0,<10"
mypy = ">=0.901,<2"
pydantic = "^2.2"
pytest = "^6.2"
pytest-cov = "^2.12"
pytest-mock = "^3.6"
ruff = "^0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
target-version = "py37"
select = ["B", "COM819", "C4", "E", "F", "I", "PT", "Q", "UP", "W"]
ignore = ["E501"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
extend-exclude = [".venv", ".direnv", ".git", "__pycache__", "build", "dist"]
src = ["vatvalidate", "tests"]

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["vatvalidate"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov"
