[project]
name = "vatvalidate"
version = "0.0.2"
description = "vatvalidate is a Python library for validating UK VAT numbers."
authors = [{ name = "Beauhurst Devs", email = "dev@beauhurst.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
documentation = "https://github.com/Beauhurst/vatvalidate"
license = "MIT"
packages = [
    { include = "vatvalidate" },
    { include = "vatvalidate/py.typed" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
debug = ["jupyter>=1,<2"]
dev = [
    "ipython>=8,<9",
    "mypy>=1,<2",
    "pytest-cov>=6,<7",
    "pytest-mock>=3,<4",
    "pytest>=8,<9",
    "ruff>=0,<1",
]

[tool.hatch.build.targets.sdist]
include = ["vatvalidate", "vatvalidate/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["vatvalidate", "vatvalidate/py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py38"
src = ["vatvalidate", "tests"]
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "tmp",
    "notebooks",
]
lint.ignore = ["E501"]
lint.select = [
    "B",
    "COM819",
    "C4",
    "E",
    "F",
    "I",
    "PT",
    "Q",
    "UP",
    "W",
    "PD",
    "RUF",
    "SIM",
]
lint.unfixable = ["B"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["vatvalidate"]


[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "normal"
ignore_missing_imports = true
packages = ["vatvalidate", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
